fix: menu padding to hid the scrollbar from showing.
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@1916 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/directives/grid-actions-directive/grid-actions-directive-style.scss
+++ b/src/directives/grid-actions-directive/grid-actions-directive-style.scss
@@ -48,7 +48,6 @@
 }
 
 .grid-action-menu {
-  padding: 0 !important;
   button {
     margin: 0 !important
   }
@@ -66,7 +65,6 @@
 .action-green {
   color: green;
 }
-
 
 .md-open-menu-container vertical-divider-directive {
   margin-left: 4px;
